--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_svg: ^2.0.10+1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +61,18 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/app_icons/
+    - assets/images/app_main/
+    - assets/images/baby/
+    - assets/images/cooking/
+    - assets/images/elder_care/
+    - assets/images/event_cleaning/
+    - assets/images/home_cleaning/
+    - assets/images/maid/
+    - assets/images/pool_cleaning/
+    - assets/images/services/
+    - assets/images/vehicle_washing/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
