--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Example Flutter app needs access to your photo library to pick images.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Example Flutter app needs access to your camera to capture new images.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Example Flutter app needs access to your microphone to record videos.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
